--- a/spring-boot-3-0-0-RC1/src/main/resources/application.properties
+++ b/spring-boot-3-0-0-RC1/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.data.mongodb.uri=mongodb://localhost:27018/workshop_mongo
+#spring.data.mongodb.uri=mongodb://localhost:27018/workshop_mongo
+spring.data.mongodb.uri=mongodb+srv://mongodb:Samu%40192@cluster0.hw9fuoz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.database=workshop_mongo
